gen/AmaranteParser.java
// Generated from C:/Users/SAMUL/IdeaProjects/AnalizadorSemanticoANTLR/src/Amarante.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AmaranteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, COMMENT=2, Comillas=3, T_dato=4, Cadena=5, If=6, Else=7, Do=8, 
		While=9, For=10, Igual=11, Suma=12, Resta=13, Multiplicacion=14, Division=15, 
		Op_logico=16, Op_relacional=17, Op_atribucion=18, Op_incremento=19, Op_booleano=20, 
		Parentesis_a=21, Parentesis_c=22, Llave_a=23, Llave_c=24, Corchete_a=25, 
		Corchete_c=26, Main=27, P_coma=28, PRINT=29, Identificador=30, Numero=31, 
		ERROR=32;
	public static final int
		RULE_programa = 0, RULE_sentencias = 1, RULE_sentencia = 2, RULE_print_stmt = 3, 
		RULE_declaracion = 4, RULE_if_stmt = 5, RULE_if_else_stmt = 6, RULE_while_stmt = 7, 
		RULE_do_while_stmt = 8, RULE_for_stmt = 9, RULE_expr_for = 10, RULE_declaracion_for = 11, 
		RULE_expr_boleana = 12, RULE_expr_stmt = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencias", "sentencia", "print_stmt", "declaracion", "if_stmt", 
			"if_else_stmt", "while_stmt", "do_while_stmt", "for_stmt", "expr_for", 
			"declaracion_for", "expr_boleana", "expr_stmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'\"'", null, null, "'if'", "'else'", "'do'", "'while'", 
			"'for'", "'='", "'+'", "'-'", "'*'", "'/'", null, null, null, null, null, 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "'main'", "';'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SPACE", "COMMENT", "Comillas", "T_dato", "Cadena", "If", "Else", 
			"Do", "While", "For", "Igual", "Suma", "Resta", "Multiplicacion", "Division", 
			"Op_logico", "Op_relacional", "Op_atribucion", "Op_incremento", "Op_booleano", 
			"Parentesis_a", "Parentesis_c", "Llave_a", "Llave_c", "Corchete_a", "Corchete_c", 
			"Main", "P_coma", "PRINT", "Identificador", "Numero", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Amarante.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AmaranteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode Main() { return getToken(AmaranteParser.Main, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public TerminalNode Llave_a() { return getToken(AmaranteParser.Llave_a, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode Llave_c() { return getToken(AmaranteParser.Llave_c, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(Main);
			setState(29);
			match(Parentesis_a);
			setState(30);
			match(Parentesis_c);
			setState(31);
			match(Llave_a);
			setState(32);
			sentencias();
			setState(33);
			match(Llave_c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciasContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1610614608L) != 0)) {
				{
				{
				setState(35);
				sentencia();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public If_else_stmtContext if_else_stmt() {
			return getRuleContext(If_else_stmtContext.class,0);
		}
		public While_stmtContext while_stmt() {
			return getRuleContext(While_stmtContext.class,0);
		}
		public Do_while_stmtContext do_while_stmt() {
			return getRuleContext(Do_while_stmtContext.class,0);
		}
		public For_stmtContext for_stmt() {
			return getRuleContext(For_stmtContext.class,0);
		}
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public Print_stmtContext print_stmt() {
			return getRuleContext(Print_stmtContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentencia);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				declaracion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				if_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				if_else_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(44);
				while_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(45);
				do_while_stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(46);
				for_stmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(47);
				expr_stmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(48);
				print_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_stmtContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(AmaranteParser.PRINT, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public Expr_boleanaContext expr_boleana() {
			return getRuleContext(Expr_boleanaContext.class,0);
		}
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public TerminalNode P_coma() { return getToken(AmaranteParser.P_coma, 0); }
		public TerminalNode Cadena() { return getToken(AmaranteParser.Cadena, 0); }
		public TerminalNode Identificador() { return getToken(AmaranteParser.Identificador, 0); }
		public Print_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterPrint_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitPrint_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitPrint_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Print_stmtContext print_stmt() throws RecognitionException {
		Print_stmtContext _localctx = new Print_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print_stmt);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(PRINT);
				setState(52);
				match(Parentesis_a);
				setState(53);
				expr_boleana();
				setState(54);
				match(Parentesis_c);
				setState(55);
				match(P_coma);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(PRINT);
				setState(58);
				match(Parentesis_a);
				setState(59);
				match(Cadena);
				setState(60);
				match(Parentesis_c);
				setState(61);
				match(P_coma);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(PRINT);
				setState(63);
				match(Parentesis_a);
				setState(64);
				match(Identificador);
				setState(65);
				match(Parentesis_c);
				setState(66);
				match(P_coma);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode T_dato() { return getToken(AmaranteParser.T_dato, 0); }
		public TerminalNode Identificador() { return getToken(AmaranteParser.Identificador, 0); }
		public TerminalNode P_coma() { return getToken(AmaranteParser.P_coma, 0); }
		public TerminalNode Igual() { return getToken(AmaranteParser.Igual, 0); }
		public TerminalNode Numero() { return getToken(AmaranteParser.Numero, 0); }
		public TerminalNode Cadena() { return getToken(AmaranteParser.Cadena, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(69);
				match(T_dato);
				setState(70);
				match(Identificador);
				setState(71);
				match(P_coma);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(72);
				match(T_dato);
				setState(73);
				match(Identificador);
				setState(74);
				match(Igual);
				setState(75);
				match(Numero);
				setState(76);
				match(P_coma);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(77);
				match(T_dato);
				setState(78);
				match(Identificador);
				setState(79);
				match(Igual);
				setState(80);
				match(Cadena);
				setState(81);
				match(P_coma);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_stmtContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(AmaranteParser.If, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public Expr_boleanaContext expr_boleana() {
			return getRuleContext(Expr_boleanaContext.class,0);
		}
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public TerminalNode Llave_a() { return getToken(AmaranteParser.Llave_a, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode Llave_c() { return getToken(AmaranteParser.Llave_c, 0); }
		public If_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterIf_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitIf_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitIf_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_stmtContext if_stmt() throws RecognitionException {
		If_stmtContext _localctx = new If_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_if_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(If);
			setState(85);
			match(Parentesis_a);
			setState(86);
			expr_boleana();
			setState(87);
			match(Parentesis_c);
			setState(88);
			match(Llave_a);
			setState(89);
			sentencias();
			setState(90);
			match(Llave_c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_else_stmtContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(AmaranteParser.If, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public Expr_boleanaContext expr_boleana() {
			return getRuleContext(Expr_boleanaContext.class,0);
		}
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public List<TerminalNode> Llave_a() { return getTokens(AmaranteParser.Llave_a); }
		public TerminalNode Llave_a(int i) {
			return getToken(AmaranteParser.Llave_a, i);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public List<TerminalNode> Llave_c() { return getTokens(AmaranteParser.Llave_c); }
		public TerminalNode Llave_c(int i) {
			return getToken(AmaranteParser.Llave_c, i);
		}
		public TerminalNode Else() { return getToken(AmaranteParser.Else, 0); }
		public If_else_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_else_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterIf_else_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitIf_else_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitIf_else_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_else_stmtContext if_else_stmt() throws RecognitionException {
		If_else_stmtContext _localctx = new If_else_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_if_else_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(If);
			setState(93);
			match(Parentesis_a);
			setState(94);
			expr_boleana();
			setState(95);
			match(Parentesis_c);
			setState(96);
			match(Llave_a);
			setState(97);
			sentencias();
			setState(98);
			match(Llave_c);
			setState(99);
			match(Else);
			setState(100);
			match(Llave_a);
			setState(101);
			sentencias();
			setState(102);
			match(Llave_c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class While_stmtContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(AmaranteParser.While, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public Expr_boleanaContext expr_boleana() {
			return getRuleContext(Expr_boleanaContext.class,0);
		}
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public TerminalNode Llave_a() { return getToken(AmaranteParser.Llave_a, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode Llave_c() { return getToken(AmaranteParser.Llave_c, 0); }
		public While_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterWhile_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitWhile_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitWhile_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_stmtContext while_stmt() throws RecognitionException {
		While_stmtContext _localctx = new While_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_while_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(While);
			setState(105);
			match(Parentesis_a);
			setState(106);
			expr_boleana();
			setState(107);
			match(Parentesis_c);
			setState(108);
			match(Llave_a);
			setState(109);
			sentencias();
			setState(110);
			match(Llave_c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Do_while_stmtContext extends ParserRuleContext {
		public TerminalNode Do() { return getToken(AmaranteParser.Do, 0); }
		public TerminalNode Llave_a() { return getToken(AmaranteParser.Llave_a, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode Llave_c() { return getToken(AmaranteParser.Llave_c, 0); }
		public TerminalNode While() { return getToken(AmaranteParser.While, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public Expr_boleanaContext expr_boleana() {
			return getRuleContext(Expr_boleanaContext.class,0);
		}
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public TerminalNode P_coma() { return getToken(AmaranteParser.P_coma, 0); }
		public Do_while_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_while_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterDo_while_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitDo_while_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitDo_while_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Do_while_stmtContext do_while_stmt() throws RecognitionException {
		Do_while_stmtContext _localctx = new Do_while_stmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_do_while_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(Do);
			setState(113);
			match(Llave_a);
			setState(114);
			sentencias();
			setState(115);
			match(Llave_c);
			setState(116);
			match(While);
			setState(117);
			match(Parentesis_a);
			setState(118);
			expr_boleana();
			setState(119);
			match(Parentesis_c);
			setState(120);
			match(P_coma);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class For_stmtContext extends ParserRuleContext {
		public TerminalNode For() { return getToken(AmaranteParser.For, 0); }
		public TerminalNode Parentesis_a() { return getToken(AmaranteParser.Parentesis_a, 0); }
		public Expr_forContext expr_for() {
			return getRuleContext(Expr_forContext.class,0);
		}
		public TerminalNode Parentesis_c() { return getToken(AmaranteParser.Parentesis_c, 0); }
		public TerminalNode Llave_a() { return getToken(AmaranteParser.Llave_a, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode Llave_c() { return getToken(AmaranteParser.Llave_c, 0); }
		public For_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).enterFor_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmaranteListener ) ((AmaranteListener)listener).exitFor_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmaranteVisitor ) return ((AmaranteVisitor<? extends T>)visitor).visitFor_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_stmtContext for_stmt() throws RecognitionException {
		For_stmtContext _localctx = new For_stmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_for_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(For);
			setState(123);
			match(Parentesis_a);
			setState(124);
			expr_for();
			setState(125);
			match(Parentesis_c);
			setState(126);
			match(Llave_a);
			setState(127);
			sentencias();
			setState(128);
			match(Llave_c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
